<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Antercrumb</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="facebook_app_id">470093599772761</string>
    <string name="game_menu">Menu</string>
    <string name="game_score">Scores</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Back">BACK</string>
    <string name="button_profile">Profile</string>
    <string name="game_start">PLAY</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="change_username">Change Username</string>
    <string name="profile_settings">PROFILE </string>
    <string name="game_settings">GAME </string>
    <string name="edit_username">change username</string>
    
        
</resources>