<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="background_image"
        android:src="@drawable/grass" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnToProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_profile" />

        <TextView
            android:id="@+id/playTheGame"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/game_start"
            android:typeface="serif" />

        <TextView
            android:id="@+id/scoreMenu"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/scores" />

        <TextView
            android:id="@+id/settings"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/settings" />
        <!--
        <TextView
            android:id="@+id/about"
            style="@style/MenuFont"
            android:text="ABOUT" />
        -->

        <TextView
            android:id="@+id/exit"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="EXIT" />
    </LinearLayout>

</RelativeLayout>