<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="background_image"
        android:src="@drawable/grass" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

      
        <TextView
            android:id="@+id/profileSettings"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/profile_settings"
            android:typeface="serif" />

        <TextView
            android:id="@+id/gameSettings"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/game_settings" />


        <TextView
            android:id="@+id/backToSettings"
            style="@style/MenuFont"
            android:onClick="onClick"
            android:text="@string/Back" />
    </LinearLayout>

</RelativeLayout>